--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <img src="images/handmaids_main.jpg" alt="main"></div>
 
         <div id="presentation">
-        <div class="title2"><img src="images/THT-Season-3.png" alt="cover"></div>
-        <h2>Handmaid's Tale</h2></div>
+        <div class="title2"><img src="images/THT-Season-3.png" alt="title2"></div>
+        <h2>Handmaid's Tale</h2>
         <div class="genre">            
             <ul>
                 <li>TV DRAMA</li>
@@ -44,7 +44,7 @@
         </div>
         <div class="bouton">
             <div class="play">PLAY</div>
-            <div class="episodes"></div>
+            <div class="episodes">START WATCHING: S1 E1</div>
             <div class="ajouter"></div>
         </div>
 
@@ -60,13 +60,14 @@
                 <li>DETAILS</li>
             </ul>
         </div>
+
         <div class="slider">
             <img src="images/harlots.jpg" alt="harlots">
             <img src="images/thefirst.jpg" alt="first">
             <img src="images/loomingtower.jpg" alt="looming">
             <img src="images/theact.jpg" alt="act">
         </div>
-        </div>
+        
     </footer>
 
 </body>
